--- a/68f03254bfb16b16ad3e4046-68eed5cdba6fdc86c6484625/itManual.tex
+++ b/68f03254bfb16b16ad3e4046-68eed5cdba6fdc86c6484625/itManual.tex
@@ -21,7 +21,7 @@
 % BAD (examples
 
 % Does not work with LaTeX=>PDF
-\usepackage[pdfmark, 
+\usepackage[ 
 breaklinks=true, 
 colorlinks=true,
 citecolor=blue,
