updated compilaiton bypassing warnings

--- a/68f03254bfb16b16ad3e4046-68eed5cdba6fdc86c6484625/prologue.tex
+++ b/68f03254bfb16b16ad3e4046-68eed5cdba6fdc86c6484625/prologue.tex
@@ -7,7 +7,11 @@
 % Cornell-style title page
 \begin{titlepage}
         \title{Homework File}
-        \author{Justin Baumann & Gianna Cerbone & Thomas Ung & Spurthi Setty\\ Stevens.edu }
+        \author{
+		Justin Baumann \\
+		Gianna Cerbone \\
+		Thomas Ung \\
+		Spurthi Setty\\ Stevens.edu }
         \conferraldate{}{\today} \maketitle
 \end{titlepage}
 
